load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "az-blob-credential-helper_lib",
    srcs = ["main.go"],
    importpath = "github.com/ddeville/az-credential-helper/cmd/az-blob-credential-helper",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "az-blob-credential-helper",
    embed = [":az-blob-credential-helper_lib"],
    visibility = ["//visibility:public"],
)
