load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "docker-credential-acr-login_lib",
    srcs = ["main.go"],
    importpath = "github.com/ddeville/az-credential-helper/cmd/docker-credential-acr-login",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg",
        "@com_github_docker_docker_credential_helpers//credentials",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "docker-credential-acr-login",
    embed = [":docker-credential-acr-login_lib"],
    visibility = ["//visibility:public"],
)
